# riddle-rm2

./: .gitignore  LICENSE  README.md
drawlab/: external.manifest.json  make-bundle.sh
drawlab/scripts/: appload-launch.sh  drawlab-takeover.sh
home/: external.manifest.json  make-bundle.sh
home/scripts/: appload-launch.sh  home-takeover.sh
quill/: README.md  build.sh
quill/src/: drawlab.c  epfb.cpp  home.cpp
riddle/: Cargo.toml  build-takeover.sh  external.manifest.json  oracle.env.example  settings.schema.json
riddle/scripts/: appload-launch.sh  make-bundle.sh  riddle-start.sh
riddle/src/: display.rs  fb.rs  help.rs  ink.rs  main.rs  memory.rs  oracle.rs  pen.rs  qtfb.rs  surface.rs  touch.rs
