[package]
name = "riddle"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The diary of Tom Riddle, for the reMarkable Paper Pro"

[dependencies]
libc = "0.2"
signal-hook = "0.3"
png = "0.17"
ab_glyph = "0.2"
# HTTP + TLS for the OpenAI-compatible oracle backend. Pure Rust (rustls), no
# OpenSSL/C — keeps the binary self-contained and cross-compiles cleanly.
ureq = { version = "2.10", default-features = false, features = ["tls"] }

[features]
# Link libquill.so (vendor e-ink engine C ABI) for full-takeover mode.
takeover = []
# Target the reMarkable 2 (ARMv7, i.MX7): 1404x1872 panel, Wacom digitizer,
# 16-byte evdev events. Without it the build targets the Paper Pro (default).
rm2 = []

[profile.release]
strip = true
lto = true
